--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/IsuruMaduranga/Land-Chain-Backend#readme",
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "composer-admin": "^0.20.7",
+    "composer-client": "^0.20.7",
+    "composer-common": "^0.20.7",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.16",
+    "morgan": "^1.9.1",
+    "validator": "^10.11.0"
   }
 }
