add new few endpoints

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
 {
-    "dbUrl" : "mongodb://127.0.0.1:27017/LandChain"
+    "dbUrl" : "mongodb://127.0.0.1:27017/LandChain",
+    "blockchainUrl": "http://localhost:3000"
 }
