--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "composer-admin": "^0.20.7",
     "composer-client": "^0.20.7",
     "composer-common": "^0.20.7",
+    "config": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
