--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js backend for Land Chain the blockchain based land selling and registration platform",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node app.js"
   },
   "repository": {
@@ -30,6 +30,11 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
+    "readline-sync": "^1.4.9",
     "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "jest": "^24.7.1",
+    "supertest": "^4.0.2"
   }
 }
