--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Node.js backend for Land Chain the blockchain based land selling and registration platform",
   "main": "app.js",
   "scripts": {
-    "test": "jest --verbose --detectOpenHandles",
+    "test": "jest --verbose",
     "start": "node app.js"
   },
   "repository": {
@@ -38,7 +38,7 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "jest": "^24.7.1",
-    "supertest": "^4.0.2"
+    "jest": "^22.2.2",
+    "supertest": "^3.0.0"
   }
 }
